# backend-twitter-django

./: README.md  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: build.yml  python-anywhere-deploy.yml  pythonanywhere-deploy.yml  workflow-pr.yml
twitter/: asgi.py  settings.py  urls.py  views.py  wsgi.py
twitter/templates/: project.html
usuario/: admin.py  exception_handlers.py  models.py  urls.py  views.py
usuario/migrations/: 0001_initial.py  0002_post.py  0003_alter_profile_image.py  0004_alter_profile_image.py  0005_alter_profile_image.py
usuario/serializers/: __init__.py  usuario_serializer.py
